// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders a full Container component 1`] = `
<Container
  full={true}
  fullVertical={false}
  small={false}
>
  <styled.div
    full={true}
    fullVertical={false}
    small={false}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "dYLZGK",
            "rules": Array [
              "
    padding-left: ",
              [Function],
              ";
    padding-right: ",
              [Function],
              ";
    padding-top: ",
              [Function],
              ";
    padding-bottom: ",
              [Function],
              ";
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      full={true}
      fullVertical={false}
      small={false}
    >
      <div
        className="sc-bdVaJa dYLZGK"
      >
        Full Container
      </div>
    </StyledComponent>
  </styled.div>
</Container>
`;

exports[`Container renders a full vertical Container component 1`] = `
<Container
  full={false}
  fullVertical={true}
  small={false}
>
  <styled.div
    full={false}
    fullVertical={true}
    small={false}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "lfOKPp",
            "rules": Array [
              "
    padding-left: ",
              [Function],
              ";
    padding-right: ",
              [Function],
              ";
    padding-top: ",
              [Function],
              ";
    padding-bottom: ",
              [Function],
              ";
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      full={false}
      fullVertical={true}
      small={false}
    >
      <div
        className="sc-bdVaJa lfOKPp"
      >
        Full Vertical Container
      </div>
    </StyledComponent>
  </styled.div>
</Container>
`;

exports[`Container renders a small Container component 1`] = `
<Container
  full={false}
  fullVertical={false}
  small={true}
>
  <styled.div
    full={false}
    fullVertical={false}
    small={true}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "fOkvyZ",
            "rules": Array [
              "
    padding-left: ",
              [Function],
              ";
    padding-right: ",
              [Function],
              ";
    padding-top: ",
              [Function],
              ";
    padding-bottom: ",
              [Function],
              ";
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      full={false}
      fullVertical={false}
      small={true}
    >
      <div
        className="sc-bdVaJa fOkvyZ"
      >
        Hello Small Container
      </div>
    </StyledComponent>
  </styled.div>
</Container>
`;

exports[`Container should render without crashing with just a child passed 1`] = `
<Container
  full={false}
  fullVertical={false}
  small={false}
>
  <styled.div
    full={false}
    fullVertical={false}
    small={false}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "bHeHMU",
            "rules": Array [
              "
    padding-left: ",
              [Function],
              ";
    padding-right: ",
              [Function],
              ";
    padding-top: ",
              [Function],
              ";
    padding-bottom: ",
              [Function],
              ";
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      full={false}
      fullVertical={false}
      small={false}
    >
      <div
        className="sc-bdVaJa bHeHMU"
      >
        Hello Span
      </div>
    </StyledComponent>
  </styled.div>
</Container>
`;
